--- a/src/main/resources/application-QA.properties
+++ b/src/main/resources/application-QA.properties
@@ -17,4 +17,4 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #Profile
-spring.profile.active = dev
+spring.profile.active = qa
