--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 			<version>3.4.4</version>
 		</dependency>
+
+		<!-- Redis cache-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
