--- a/src/main/resources/application-QA.properties
+++ b/src/main/resources/application-QA.properties
@@ -16,5 +16,11 @@ server.port = 8001
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
+#Redis cache
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
+
 #Profile
 spring.profile.active = qa
